syntax = "proto3";
package h2x.blacklist;

option go_package = "github.com/h2x/v4-chain/protocol/x/blacklist/types";

// BlacklistedAddressInfo stores full information about a blacklisted address.
message BlacklistedAddressInfo {
  // The blacklisted address.
  string address = 1;

  // The reason for blacklisting.
  string reason = 2;

  // Unix timestamp when the address was blocked.
  int64 blocked_at = 3;

  // Whether the address is currently blocked.
  bool is_blocked = 4;

  // Unix timestamp when the address was unblocked (0 if still blocked).
  int64 unblocked_at = 5;

  // The reason for unblocking.
  string unblock_reason = 6;
}

// GenesisState defines the blacklist module's genesis state.
message GenesisState {
  // entries defines the list of blacklist entries at genesis.
  repeated BlacklistedAddressInfo entries = 1;
}
